Fix payment method csss on mobile

--- a/src/components/SavedCardsPicker/SavedCardsPickerHeader.module.css
+++ b/src/components/SavedCardsPicker/SavedCardsPickerHeader.module.css
@@ -4,10 +4,20 @@
   align-items: center;
   box-sizing: border-box;
   display: flex;
-  height: var(--marginMLarge);
+  height: auto;
   padding: var(--marginSmall);
   margin-left: var(--marginSmall);
   cursor: pointer;
+}
+
+@media (--maxMobile) {
+  .headerContent {
+    flex-direction: column;
+  }
+}
+
+.headerContent {
+  display: flex;
 }
 
 .text {
@@ -20,9 +30,15 @@
   display: flex;
 }
 
+@media (--maxMobile) {
+  .availableCards {
+    margin-left: 0;
+  }
+}
+
 .cardIcon {
   height: 24px;
-  margin: 0 2px;
+  margin: 0 4px 0 0;
 }
 
 .cardIconSmaller {
